K8's files/zomato deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zomato
  namespace: default
  labels:
    app:  zomato
spec:
  selector:
    matchLabels:
      app: zomato
  replicas: 1
  template:
    metadata:
      labels:
        app:  zomato
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  zomato
        image:  docker.io/anikesh372/zomato:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  3000
          name:  zomato
